JumpScript/tests/baselines/reference/constructorArgsErrors5.errors.txt
tests/cases/compiler/constructorArgsErrors5.jump(2,18): error TS1090: 'export' modifier cannot appear on a parameter.


==== tests/cases/compiler/constructorArgsErrors5.jump (1 errors) ====
    class foo {
        constructor (export a: number) {
                     ~~~~~~
!!! error TS1090: 'export' modifier cannot appear on a parameter.
        }
    }
    